--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1224,6 +1224,23 @@ author = "Leslie Borjas De Xena"
   publisher={SAGE Publications}
 }
 
+@article{laurillard2012teaching,
+  title={Teaching as a design science},
+  author={Laurillard, Diana},
+  journal={building pedagogical patterns for learning and technology},
+  year={2012},
+  publisher={Routledge London}
+}
+
+@incollection{reimann2011design,
+  title={Design-based research},
+  author={Reimann, Peter},
+  booktitle={Methodological Choice and Design},
+  pages={37--50},
+  year={2011},
+  publisher={Springer}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
